#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ(2.60)
AC_INIT(erlang_v8, 0.0.1)

# Checks for programs.
AC_PROG_CXX
AC_PATH_PROG(ERL, erl)
AC_PATH_PROG(ERLC, erlc)
#

ERLDIR=`awk -F= '/ROOTDIR=/ { print [$]2; exit; }' $ERL`
AC_SUBST(ERL)
AC_SUBST(ERLC)
AC_SUBST(ERLBINDIR)
AC_SUBST(ERLDIR)

AC_ARG_WITH(js_headers,
    [ --with-js_headers=<path> directory containing Spidermonkey header files. e.g. /usr/local],
    [SPIDERMONKEY_HEADERS="$with_js_headers"],
		[SPIDERMONKEY_HEADERS=/usr/local])

AC_ARG_WITH(js_lib,
    [ --with-js_lib=<path> directory containing libjs.a],
    [SPIDERMONKEY_LIB="$with_js_lib"],
		[SPIDERMONKEY_LIB=/usr/local/lib])

AC_SUBST(SPIDERMONKEY_HEADERS)
AC_SUBST(SPIDERMONKEY_LIB)

ERL_INTERFACE=`ls ${ERLDIR}/lib | grep erl_interface | tail -n 1`

ERTSBASE="`$ERL -noshell -noinput -eval 'io:format (\"~s\", [[ \"/\" ++ filename:join (lists:reverse ([ \"erts-\" ++ erlang:system_info (version) | tl (lists:reverse (string:tokens (code:lib_dir (), \"/\"))) ])) ]]).' -s erlang halt `"
AC_SUBST(ERTSBASE)

ERL_FLAGS="-I ${ERTSBASE}/include -I ${ERLDIR}/lib/${ERL_INTERFACE}/include"
AC_SUBST(ERL_FLAGS)

LIBEI="${ERLDIR}/lib/${ERL_INTERFACE}/lib/libei.a"
AC_SUBST(LIBEI)

# Checks for header files.
AC_CHECK_HEADERS([])

# Checks for typedefs, structures, and compiler characteristics.
AC_HEADER_STDBOOL

# Checks for library functions.
AC_HEADER_STDC

# Enable 64bit builds
AC_ARG_ENABLE(enable_64bit, [  --enable-64bit          enable 64bit build (needed on some OS X systems) [[default=no]]])
AC_SUBST(enable_64bit)

AC_OUTPUT([Makefile])
